--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -411,6 +411,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem4">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new ImageIcon(JBlock.getIcon(JBlock.Type.IO))" type="code"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="I/O"/>
                 <Property name="toolTipText" type="java.lang.String" value="I/O"/>
               </Properties>
