--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -420,6 +420,9 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem5">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new ImageIcon(JBlock.getIcon(JBlock.Type.CPU))" type="code"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="CPU"/>
                 <Property name="toolTipText" type="java.lang.String" value="CPU"/>
               </Properties>
