--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -427,6 +427,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="CPU"/>
                 <Property name="toolTipText" type="java.lang.String" value="CPU"/>
+                <Property name="actionCommand" type="java.lang.String" value="add/CPU"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem5ActionPerformed"/>
