--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -440,6 +440,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Decision"/>
                 <Property name="toolTipText" type="java.lang.String" value="Decision"/>
+                <Property name="actionCommand" type="java.lang.String" value="add/DECISION"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
