--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -453,6 +453,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="End"/>
                 <Property name="toolTipText" type="java.lang.String" value="End"/>
+                <Property name="actionCommand" type="java.lang.String" value="IO/RETURN"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem8">
