--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -476,6 +476,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Jump"/>
                 <Property name="toolTipText" type="java.lang.String" value="Jump"/>
+                <Property name="actionCommand" type="java.lang.String" value="add/JUMP"/>
               </Properties>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
