--- a/Revised JB version/src/javablock/flowchart/blockEditors/StartEditor.form
+++ b/Revised JB version/src/javablock/flowchart/blockEditors/StartEditor.form
@@ -116,6 +116,9 @@
                   <ResourceString bundle="config/lang/lang.properties" key="startEditor.displayName" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="displayNameActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="fieldsScroll">
               <Properties>
