--- a/Revised JB version/src/javablock/flowchart/blockEditors/DecisionEditor.form
+++ b/Revised JB version/src/javablock/flowchart/blockEditors/DecisionEditor.form
@@ -54,35 +54,17 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                      <Component id="comparisonVariable1" min="-2" pref="55" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="comparisonOperators" min="-2" pref="40" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="comparisonVariable2" min="-2" pref="54" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="logicalOperators" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Component id="addButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="addButton" alignment="0" pref="213" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="comparisonVariable1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="comparisonOperators" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="comparisonVariable2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="logicalOperators" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                       <Component id="addButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="197" max="32767" attributes="0"/>
                   </Group>
@@ -93,33 +75,6 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="text" type="java.lang.String" value="if:"/>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="comparisonVariable1">
-            </Component>
-            <Component class="javax.swing.JComboBox" name="comparisonOperators">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="5">
-                    <StringItem index="0" value="=="/>
-                    <StringItem index="1" value="&gt;"/>
-                    <StringItem index="2" value="&lt;"/>
-                    <StringItem index="3" value="&gt;="/>
-                    <StringItem index="4" value="!="/>
-                  </StringArray>
-                </Property>
-              </Properties>
-            </Component>
-            <Component class="javax.swing.JTextField" name="comparisonVariable2">
-            </Component>
-            <Component class="javax.swing.JComboBox" name="logicalOperators">
-              <Properties>
-                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
-                    <StringItem index="0" value="&amp;&amp;"/>
-                    <StringItem index="1" value="||"/>
-                  </StringArray>
-                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="addButton">
