--- a/Revised JB version/src/javablock/flowchart/generator/For.form
+++ b/Revised JB version/src/javablock/flowchart/generator/For.form
@@ -21,8 +21,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="declare" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="useClips" min="-2" max="-2" attributes="1"/>
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="1" attributes="0">
@@ -84,10 +83,7 @@
                   <Component id="iterNum" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="useClips" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="declare" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="declare" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -165,13 +161,6 @@
             <StringItem index="2" value="*"/>
             <StringItem index="3" value="/"/>
           </StringArray>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="useClips">
-      <Properties>
-        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
-          <ResourceString bundle="config/lang/lang.properties" key="generator.for.useBraces" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameSlashes}&quot;).getString(&quot;{key}&quot;)"/>
         </Property>
       </Properties>
     </Component>
