--- a/Revised JB version/src/javablock/gui/MainWindow.form
+++ b/Revised JB version/src/javablock/gui/MainWindow.form
@@ -519,27 +519,25 @@
                 <Property name="text" type="java.lang.String" value="zoom  "/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JSpinner" name="zoomSpinner">
+            <Component class="javax.swing.JToolBar$Separator" name="jSeparator8">
+            </Component>
+            <Component class="javax.swing.JComboBox" name="zoomCombobox">
               <Properties>
-                <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-                  <SpinnerModel initial="0" maximum="5000" minimum="0" numberType="java.lang.Integer" stepSize="50" type="number"/>
-                </Property>
-                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[47, 20]"/>
-                </Property>
-                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[47, 20]"/>
-                </Property>
-                <Property name="name" type="java.lang.String" value="" noResource="true"/>
-                <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                  <Dimension value="[47, 20]"/>
+                <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+                  <StringArray count="10">
+                    <StringItem index="0" value="10%"/>
+                    <StringItem index="1" value="20%"/>
+                    <StringItem index="2" value="30%"/>
+                    <StringItem index="3" value="40%"/>
+                    <StringItem index="4" value="50%"/>
+                    <StringItem index="5" value="60%"/>
+                    <StringItem index="6" value="70%"/>
+                    <StringItem index="7" value="80%"/>
+                    <StringItem index="8" value="90%"/>
+                    <StringItem index="9" value="100%"/>
+                  </StringArray>
                 </Property>
               </Properties>
-              <AuxValues>
-                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-              </AuxValues>
-            </Component>
-            <Component class="javax.swing.JToolBar$Separator" name="jSeparator8">
             </Component>
             <Component class="javax.swing.JButton" name="scriptStart">
               <Properties>
